Updates and additions to profile.d files